Create route to add a new item to list. Updated the html file and added a button

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -6,7 +6,13 @@
     <h1 class="display-4">To-Do App</h1>
     <p class="lead">Just another to-do app.</p>
   </div>
-
+  <div>
+    <form action="{{url_for('add_item') }}" method="POST"> 
+      <label for"title">Enter item title:</label>
+      <input type="text" name="field_name" id="field_name">
+      <input type='button' value="Submit">
+    </form>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <h2>Items</h2>
