--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -7,7 +7,7 @@
     <p class="lead">Just another to-do app.</p>
   </div>
   <div>
-    <form action="{{url_for('add_item') }}" method="POST"> 
+    <form action="{{url_for('new_item') }}" method="POST"> 
       <label for"title">Enter item title:</label>
       <input type="text" name="field_name" id="field_name">
       <input type='button' value="Submit">
