--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -10,7 +10,7 @@
     <form action="{{url_for('new_item') }}" method="POST"> 
       <label for"title">Enter item title:</label>
       <input type="text" name="field_name" id="field_name">
-      <input type='button' value="Submit">
+      <input type='submit' value="Submit">
     </form>
   </div>
   <div class="row">
