Changed the field name description to be more descriptive and removed the second route for the list of items.

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -9,7 +9,7 @@
   <div>
     <form action="{{url_for('new_item') }}" method="POST"> 
       <label for"title">Enter item title:</label>
-      <input type="text" name="field_name" id="field_name">
+      <input type="text" name="title_name" id="title_name">
       <input type='submit' value="Submit">
     </form>
   </div>
