--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -6,20 +6,19 @@
     <h1 class="display-4">To-Do App</h1>
     <p class="lead">Just another to-do app.</p>
   </div>
-  <div>
-    <form action="{{url_for('new_item') }}" method="POST"> 
-      <label for"title">Enter item title:</label>
-      <input type="text" name="item_title" id="item_title">
-      <input type='submit' value="Submit">
-    </form>
-  </div>
   <div class="row">
     <div class="col-md-12">
       <h2>Items</h2>
       <ul class="list-group mb-4">
-        {% for item in items %}
-          <li> {{item.title}} </li>
+        <table>
+          <tr>
+            {% for item in items %}
+            <td> {{item.title}} </td>
+            <td> {{item.status}}</td>
+            <td> {{item.id}}</td>
+          </tr>
           {% endfor %}
+        </table>
       </ul>
     </div>
   </div>
