Created functions in trello_items.py to get trello api data and list it in the table

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -12,6 +12,11 @@
       <ul class="list-group mb-4">
         <table>
           <tr>
+            <td>Item</td>
+            <td>Status</td>
+            <td>Item ID</td>
+          </tr>
+          <tr>
             {% for item in items %}
             <td> {{item.title}} </td>
             <td> {{item.status}}</td>
