--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -6,6 +6,19 @@
     <h1 class="display-4">To-Do App</h1>
     <p class="lead">Just another to-do app.</p>
   </div>
+  <div>
+    <form action="{{url_for('new_item') }}" method="POST">
+      <label for"title">Enter item title:</label>
+      <input type="text" name="item_title" id="item_title">
+      <label for"status">Status:</label>
+      <select id="status" name="status">
+        <option value="To Do">To Do</option>
+        <option value="In Progress">In Progress</option>
+        <option value="Done">Done</option>
+      </select>
+      <input type='submit' value="Submit">
+    </form>
+  </div>
   <div class="row">
     <div class="col-md-12">
       <h2>Items</h2>
