Added Item and Trello class

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -31,7 +31,7 @@
           </tr>
           <tr>
             {% for item in items %}
-            <td> {{item.title}} </td>
+            <td> {{item.name}} </td>
             <td> {{item.status}}</td>
             <td> {{item.id}}</td>
             <td>
