Created a view model Imported it to app.py, called it and changed the rendered template with new View Model items. Updated HTML files to iterate through View Model items

--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -30,7 +30,7 @@
             <td>Item ID</td>
           </tr>
           <tr>
-            {% for item in items %}
+            {% for item in view_model.items %}
             <td> {{item.name}} </td>
             <td> {{item.status}}</td>
             <td> {{item.id}}</td>
