--- a/todo_app/templates/index.html
+++ b/todo_app/templates/index.html
@@ -30,7 +30,7 @@
             <td>Item ID</td>
           </tr>
           <tr>
-            {% for item in view_model %}
+            {% for item in items %}
             <td> {{item.name}} </td>
             <td> {{item.status}}</td>
             <td> {{item.id}}</td>
